service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: hello-world
