ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
    - http:
        paths:
          - path: /meow
            backend:
              serviceName: hello-world-svc
              servicePort: 80
